Fix wrapping bug in experience component

--- a/src/components/experience/Experience.module.css
+++ b/src/components/experience/Experience.module.css
@@ -73,6 +73,7 @@
 }
 
 .experienceExperienceDetails {
+    width: 100%;
     font-size: 1.2rem;
     text-align: start;
     margin-top: 0px;
@@ -88,8 +89,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 100%;
     padding: 10px;
-    margin-top: 10px;
     transition: 0.7s ease;
 }
 
